Improve caching mechanism for LogFilter